--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         </p>
         <p class="apresentacao__about__texto">No momento minhas hardskills estão em constante mudança, pois até o momento não parei de me atualizar sobre a carreira que quero seguir, tenho diversos cursos e certificados que adquiri nesses anos, tanto de hardware, quanto software, como dito acima, ainda estou cursando faculdade no momento, então tenho muito que desenvolver pela frente.
         </p>
-        <p class="apresentacao__about__texto">Resumindo, tenho um bom histórico e bastante experiência em TI que aos anos fui adquirindo, continuo me capacitando a todo momento em busca de me tornar um profissional mais qualificado nessa área tão deseja que é DEV.</p>
+        <p class="apresentacao__about__texto">Resumindo, tenho um bom histórico e bastante experiência em TI que aos anos fui adquirindo, continuo me capacitando a todo momento em busca de me tornar um profissional mais qualificado nessa área tão desejada que é DEV.</p>
     </main>
 
     <footer class="rodape">
