--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./assets/linkedin.png">
                     LinkedIn
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/SousaDev97?tab=repositories">
+                <a class="apresentacao__links__link" href="https://github.com/SousaDev97">
                     <img src="./assets/github.png">
                     Github
                 </a>
