--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo"> Seja bem vindo ao meu portifólio!<strong class="titulo-destaque"> Aqui você encontra um dev em ascensão! </strog></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Me chamo José Enoque, estou ingressando nesse ambiente de desenvolvimento.</p>
+            <h1 class="apresentacao__conteudo__titulo"> Bem-vindo(a) ao meu portfólio! <strong class="titulo-destaque"> Aqui você encontrará um desenvolvedor em ascensão. </strog></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Meu nome é José Enoque e estou embarcando nesta jornada no mundo do desenvolvimento. Além disso, estou animado em compartilhar minha paixão pela tecnologia e meu crescimento contínuo nessa área empolgante. Meu objetivo é expandir meus conhecimentos e aprimorar minhas habilidades de desenvolvimento para criar soluções inovadoras e impactantes.</p>
+            <p class="apresentacao__conteudo__texto">Navegue pelo meu portfólio para conhecer meus projetos, experiências e acompanhar meu progresso nessa jornada emocionante de aprendizado e descoberta. Estou pronto para enfrentar novos desafios e colaborar em projetos interessantes. Vamos criar algo incrível juntos!</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/enoque-sousa-bb89aa168/">
