--- a/curriculo.html
+++ b/curriculo.html
@@ -36,18 +36,27 @@
             <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
             <div class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
-                <li>Administração de perfis em redes sociais - Mundial Editora <a href="./certificados/Administração de perfis em redes sociais.pdf"> com certificado </a> </li>
-                <li>Introdução a Internet - Mundial Editora <a href="./certificados/Introdução a Internet.pdf"> com certificado </a></li>
-                <li>Introdução a rede de computadores - Mundial Editora <a href="./certificados/Introdução a rede de computadores.pdf"> com certificado </a></li>
-                <li>WebDesigner - Mundial Editora <a href="./certificados/WebDesigner.pdf"> com certificado </a> </li>
-                <li>Windows7 - Mundial Editora <a href="./certificados/Wwindows 7.pdf"> com certificado </a></li>
-                <li>Curso de Arquitetura de computadores: por trás de como seu programa funciona - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Arquitetura de computadores_ por trás de como seu programa funciona - Alura.pdf"> com certificado </a></li>
-                <li>HTML e CSS: Ambientes de desenvolvimento, estrutura de arquivos e tags - Alura<a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ ambientes de desenvolvimento, estrutura de arquivos e tags - Alura.pdf"> com certificado </a> </li>
-                <li>HTML e CSS: Classes, posicionamento e FlexBox - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ Classes, posicionamento e Flexbox - Alura.pdf">com certificado</a></li>
-                <li>Linux I: Conhecendo e utilizando o terminal - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Linux I_ conhecendo e utilizando o terminal - Alura.pdf"> com certificado</a></li>
-                <li>Lógica de programação: comece em lógica com jogo Pong e Javascript - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Lógica de programação_ comece em lógica com o jogo Pong e Javascript - Alura.pdf"> com certificado </a> </li>
-                <li>Lógica de programação: Laços e listas com Javascript <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Lógica de programação_ laços e listas com Javascript - Alura.pdf"> com certificado </a></li>
-                <li>HTML e CSS cabeçalho, footer e variáveis CSS - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ cabeçalho, footer e variáveis CSS - Alura.pdf">com certificado</a> </li>
+                <li>Administração de perfis em redes sociais - Mundial Editora <a href="./certificados/Administração de perfis em redes sociais.pdf" target="_blank"> com certificado </a> </li>
+                <li>Introdução a Internet - Mundial Editora <a href="./certificados/Introdução a Internet.pdf" target="_blank"> com certificado </a></li>
+                <li>Introdução a rede de computadores - Mundial Editora <a href="./certificados/Introdução a rede de computadores.pdf" target="_blank"> com certificado </a></li>
+                <li>WebDesigner - Mundial Editora <a href="./certificados/WebDesigner.pdf" target="_blank"> com certificado </a> </li>
+                <li>Windows 7 - Mundial Editora <a href="./certificados/Wwindows 7.pdf" target="_blank"> com certificado </a></li>
+                <li>Curso de Arquitetura de computadores: por trás de como seu programa funciona - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Arquitetura de computadores_ por trás de como seu programa funciona - Alura.pdf" target="_blank"> com certificado </a></li>
+                <li>HTML e CSS: Ambientes de desenvolvimento, estrutura de arquivos e tags - Alura<a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ ambientes de desenvolvimento, estrutura de arquivos e tags - Alura.pdf" target="_blank"> com certificado </a> </li>
+                <li>HTML e CSS: Classes, posicionamento e FlexBox - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ Classes, posicionamento e Flexbox - Alura.pdf" target="_blank">com certificado</a></li>
+                <li>Linux I: Conhecendo e utilizando o terminal - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Linux I_ conhecendo e utilizando o terminal - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>Lógica de programação: comece em lógica com jogo Pong e Javascript - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Lógica de programação_ comece em lógica com o jogo Pong e Javascript - Alura.pdf" target="_blank"> com certificado </a> </li>
+                <li>Lógica de programação: Laços e listas com Javascript <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Lógica de programação_ laços e listas com Javascript - Alura.pdf" target="_blank"> com certificado </a></li>
+                <li>HTML e CSS cabeçalho, footer e variáveis CSS - Alura <a href="./certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ cabeçalho, footer e variáveis CSS - Alura.pdf" target="_blank">com certificado</a> </li>
+                <li>HTML e CSS Responsividade e Publicação de Projetos - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso HTML e CSS_ trabalhando com responsividade e publicação de projetos - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>JavaScript para Web, Páginas Dinâmicas - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso JavaScript para Web_ Crie páginas dinâmicas - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>Git e GitHub, Repositório, Commit e Versões - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Git e GitHub_ repositório, commit e versões - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>MongoDB, Bando de dados NoSQL - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso MongoDB_ conhecendo um banco de dados NoSQL - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>MongoDB, Validando Dados - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso MongoDB_ validando dados - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>MongoDB, Modelagem de Dados - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso MongoDB_ modelagem de dados - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>Redes, Criação de uma Intranet - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Redes_ dos conceitos iniciais à criação de uma intranet - Alura.pdf.pdf" target="_blank"> com certificado</a></li>
+                <li>Redes, Projeto do Cliente até Provedor de Serviços - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Redes parte 2_ montando um projeto do cliente até o provedor de serviços - Alura.pdf" target="_blank"> com certificado</a></li>
+                <li>Redes, Lista de Controle e Políticas de Acesso de Usuários - Alura <a href="/certificados/JOSE ENOQUE COSTA DE SOUSA - Curso Redes parte 3_ defina as listas de controle e políticas de acesso de usuários - Alura.pdf" target="_blank"> com certificado</a></li>
             </ul>
             </div>    
         </section>
