--- a/curriculo.html
+++ b/curriculo.html
@@ -21,7 +21,7 @@
             <p class="apresentacao__conteudo__texto">
             Jose Enoque Costa de Sousa</p>
         <p class="apresentacao__conteudo__texto">Sou residente em SBC região do ABC</p>
-        <p class="apresentacao__conteudo__texto">Telefone: 11 9 5805-7967 ou 11 9 5949-2701</p>
+        <p class="apresentacao__conteudo__texto">Telefone: <a href="https://wa.me/5511958057967" target="_blank">11 9 5805-7967 <img src="/assets/whatsapp.png" alt="iconepng"></a> ou 11 9 5949-2701</p>
         <p class="apresentacao__conteudo__texto">E-mail: sousa3086@outlook.com</p>
         <p class="apresentacao__conteudo__texto">Ensino médio completo</p>
         <p class="apresentacao__conteudo__texto">Instituição de Educação Estadual do Pará</p>
